--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -25,6 +25,22 @@ const method = 'GET'
 const url = "/tweets"
 const responseType = "json"
 
+function handleDidLike(tweet_id, currentCount){
+    console.log(tweet_id, currentCount)
+}
+function LikeBtn(tweet){
+    return "<button class = 'btn btn-primary btn-small' onclick=handleDidLike(" +
+        tweet.id + "," + tweet.likes + ")>" + tweet.likes + "Likes</button>"
+}
+
+function formatTweetElement(tweet){
+    var formattedTweet = "<div class = 'mb-4 tweet' id ='tweet-" + tweet.id
+        + "' ><p>" + tweet.content +
+         "</p><div class = 'btn-group'>"+ LikeBtn(tweet) +
+
+        "</p></div>"
+    return formattedTweet
+}
 xhr.responseType = responseType
 xhr.open(method, url)
 xhr.onload = function (){
@@ -36,7 +52,8 @@ xhr.onload = function (){
     for (i=0; i<listedItems.length; i++){
         console.log(i)
         console.log(listedItems[i])
-        var currentItem = "<div class = 'mb-4'> <h1>" + listedItems[i].id + "</h1>" + "<p>" + listedItems[i].content + "</p></div>"
+        var tweetObj = listedItems[i]
+        var currentItem = formatTweetElement(tweetObj)
             finalTweetStr += currentItem
     }
     tweetsElement.innerHTML = finalTweetStr
